--- a/frontend/frontend.yaml
+++ b/frontend/frontend.yaml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: 567929707303.dkr.ecr.ap-southeast-1.amazonaws.com/k8s-frontend:latest
+          image: 567929707303.dkr.ecr.ap-southeast-1.amazonaws.com/sd4133_aws_frontend:latest
           imagePullPolicy: Always
           ports:
             - containerPort: 3000
